[package]
name = "finite"
version = "0.1.0"
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
description = "Physics simulation game"
repository = "https://github.com/FreddyWordingham/finite"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["physics", "mcrt", "ode", "diffusion", "rt"]
categories = ["game", "science", "simulation"]
edition = "2018"
documentation = "https://freddywordingham.github.io/finite"
exclude = ["docs/", "input/", "output/"]

[features]
# default = ["netcdf", "png"]

[dependencies]
# amethyst = "0.15.*"

[profile.dev]
# Development profile: "cargo build".
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

# [profile.release]
# # Release profile: "cargo build --release"
# # # [DEV RELEASE]
# opt-level = 3
# debug = true
# rpath = false
# lto = false
# debug-assertions = true
# codegen-units = 16
# panic = "unwind"
# incremental = false
# overflow-checks = true

[profile.release]
# [RELEASE]
# Release profile: "cargo build --release"
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false

[profile.test]
# Testing profile: "cargo test"
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
# Benchmark profile: "cargo bench" (and "cargo test --release)".
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-apple-darwin"
targets = ["x86_64-unknown-linux-gnu"]
